deployment-kubectl/5-service-tier/deployment-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-web-deployment  
  labels:
    app: employee-web-deployment   
    type: service-tier 
spec:
  strategy:
    type: RollingUpdate
  replicas: 4
  selector:
    matchLabels:
      app: employee-web
      type: frontend
  template:
    metadata:
      name: employee-web
      labels:
        app: employee-web 
        type: frontend 
    spec:
      containers:
        - name: employee-web #name of the container inside the pod
          image: rajeshupadhayaya/nagarro:latest # image name of the container
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: employee-web
  type: NodePort
