deployment-kubectl/5-service-tier/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: lb-service
spec:
 type: LoadBalancer
 ports:
 - targetPort: 80
   port: 80
 selector:
    app: employee-web 
    type: frontend
