deployment-kubectl/5-service-tier/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: employee-web
  type: NodePort
